# LinkedIn-Post-Generator

./: .env.example  .gitignore  pyproject.toml  readme.md
backend/: api.py  main.py  prompts.py
backend/models/: post_schemas.py  schema.py  search_schemas.py
backend/services/: post_generation_service.py  web_search_service.py
backend/tools/: document_utils.py  file_search.py  rag_pipeline.py  registry.py  web_search.py  youtube_transcribe.py
backend/tools/file_search/: config.py  document_processor.py  rag.py  tool.py
frontend/: streamlit_ui.py
frontend-react/: index.html  package-lock.json  package.json
frontend-react/src/: App.tsx  index.css
frontend-react/src/api/: client.ts
frontend-react/src/components/: ChatInput.tsx  DocumentUpload.tsx  LeftSidebar.tsx  LinkedInButton.tsx  LoadingIndicator.tsx  MessageList.tsx  ThemeToggle.tsx
frontend-react/src/components/ui/: toast.tsx
frontend-react/src/types/: api.ts
