[project]
name = "linkedin-post"
version = "1.0.0"
description = "AI-powered LinkedIn post generator using web research from Tavily and Exa"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "openai",
    "openai-agents",
    "openai-whisper",
    "python-dotenv",
    "tavily-python",
    "exa-py",
    "streamlit",
    "uvicorn",
    "httpx",
    "yt-dlp",
    "pydantic",
    "instructor",
    "certifi",
    "logfire[fastapi]",
]
